src/test/resources/typeSystemTestModels/invalid/classes/NonAbstractClassImplementsAllAbstractMethods.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.classes;

public class ClassImplementsAllAbstractMethods extends ClassCanOnlyExtendClass {


}
